Created reasonable S3 key structure. Added library code to processing jobs

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -118,6 +118,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 428,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 428,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"s3://pprsandboxpdlras3/test-clustering/pipeline-2022-03-23-19-40-49-119/code/test_clustering_something.py\" == \"s3://pprsandboxpdlras3/test-clustering/pipeline-2022-03-23-19-40-49-119/code/test_clustering_something.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -214,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,6 +315,8 @@
     "        single_indent = \"    \"\n",
     "        write_params(flow_file, param_meta, single_indent)\n",
     "        flow_file.write(\"\\n\")\n",
+    "        flow_file.write(f\"{single_indent}steps = {[s.name for s in steps]}\\n\")\n",
+    "        flow_file.write(\"\\n\")\n",
     "        write_steps(\n",
     "            fq_module_name,\n",
     "            flow_file,\n",
@@ -311,11 +333,6 @@
     "        pipeline = Pipeline(\n",
     "            name=\"test-clustering-sm-pipeline\",\n",
     "            parameters=[\n",
-    "                self.proc_image_uri,\n",
-    "                self.proc_instance_type,\n",
-    "                self.proc_instance_count,\n",
-    "                self.train_image_uri,\n",
-    "                self.train_instance_type,\n",
     "                self.traffic_percent,\n",
     "                self.workers,\n",
     "                self.model_level,\n",
@@ -333,6 +350,23 @@
     "        self.region = 'eu-west-1'\n",
     "        self.sagemaker_session = Session(default_bucket=self.bucket)\n",
     "        \n",
+    "        self.flow_name = \"test-clustering\"\n",
+    "        from datetime import datetime\n",
+    "        run_timestamp = datetime.today().__str__().replace(':', '-').replace('.', '-').replace(' ', '-')[:-3]\n",
+    "        self.flow_run_id = f\"pipeline-{run_timestamp}\"\n",
+    "        self.s3_prefix = f\"{self.flow_name}/{self.flow_run_id}\"\n",
+    "        self.flow_s3_uri = f\"s3://{self.bucket}/{self.s3_prefix}\"\n",
+    "        \n",
+    "        # Upload processing code\n",
+    "        self.s3.upload_file('test_clustering_something.py', self.bucket, f\"{self.s3_prefix}/code/test_clustering_something.py\")\n",
+    "        self.s3.upload_file('test_clustering_preprocess.py', self.bucket, f\"{self.s3_prefix}/code/test_clustering_preprocess.py\")\n",
+    "        self.s3.upload_file('test_clustering_evaluate.py', self.bucket, f\"{self.s3_prefix}/code/test_clustering_evaluate.py\")\n",
+    "  \n",
+    "        from pathlib import Path\n",
+    "    \n",
+    "        # Upload library\n",
+    "        self.upload_directory(Path('/home/sagemaker-user/git/sciflow/sciflow'), self.bucket, f\"{self.s3_prefix}/code/sciflow\")\n",
+    "        \n",
     "        pipeline = self.get_pipeline()\n",
     "        pipeline.upsert(role_arn=self.role)\n",
     "        execution = pipeline.start()\n",
@@ -345,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +430,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 416,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "def upload_directory(s3_res, path, bucketname, prefix):\n",
+    "        for root, dirs, files in os.walk(path):\n",
+    "            # Ignore non-python source files and IPython checkpoint files\n",
+    "            for file in [f for f in files if f.split('.')[-1] == 'py' and root.find('ipynb_checkpoints') == -1]:\n",
+    "                pass\n",
+    "                #print(os.path.join(root, file), bucketname, f\"{prefix}{file}\", file.find('ipynb_checkpoints'))\n",
+    "                s3_res.upload_file(os.path.join(root, file), bucketname, f\"{prefix}{file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "def download_directory(bucketname, remote_key, local_dir):\n",
+    "    from pathlib import Path\n",
+    "    import boto3\n",
+    "    s3 = boto3.client('s3')\n",
+    "    if not Path(local_dir).exists():\n",
+    "        Path(local_dir).mkdir()\n",
+    "    all_files = [obj.key for obj in boto3.resource('s3').Bucket(bucketname).objects.filter(Prefix=remote_key)]\n",
+    "    for file in all_files:\n",
+    "        file_name = file.split('/')[-1]\n",
+    "        s3.download_file(bucketname, file, f'{local_dir}/{file_name}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,11 +500,6 @@
     "    if len(step.args) == 0:\n",
     "        result = {}\n",
     "    else:\n",
-    "        print(step.name)\n",
-    "        print(param_names)\n",
-    "        print(processing_flow_scope)\n",
-    "        print(train_flow_scope)\n",
-    "        \n",
     "        args = [x.strip() for x in step.args.split(\",\")]\n",
     "        step_input = [a for a in args if a in param_names]\n",
     "        step_proc_vars = [a for a in args if a in processing_flow_scope]\n",
@@ -450,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,36 +532,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 266,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fit_single_arg_step\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "fit_single_arg_step\n",
-      "['one_param']\n",
-      "['proc_param']\n",
-      "[]\n",
-      "multi_arg_step\n",
-      "['one_param']\n",
-      "['proc_param']\n",
-      "[]\n",
-      "post_train_step\n",
-      "['one_param']\n",
-      "['proc_param']\n",
-      "['train_param']\n",
-      "multi_arg_step\n",
-      "['one_param']\n",
-      "[]\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert extract_step_vars(no_arg_step, ['one_param'], ['two_param'], []) == {}\n",
     "assert extract_step_vars(no_arg_step, [], [], []) == {}\n",
@@ -524,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +662,7 @@
     "                f\"{single_indent}{single_indent}{single_indent}processor = script_processor,\\n\"\n",
     "            )\n",
     "            flow_file.write(\n",
-    "                f\"{single_indent}{single_indent}{single_indent}code = \\\"{fq_module_name}_{step.name}.py\\\",\\n\"\n",
+    "                f\"{single_indent}{single_indent}{single_indent}code = \\\"{fq_module_name.split('.')[-1]}_{step.name}.py\\\",\\n\"\n",
     "            )\n",
     "            if len(step_vars) > 0:\n",
     "                step_param_meta = { k: param_meta[k] for k in step_vars['step_input'] }\n",
@@ -639,12 +678,12 @@
     "                # ProcInputs\n",
     "                if len(step_vars['step_proc_vars']) > 0 or len(step_vars['step_train_vars']) > 0:\n",
     "                    flow_file.write(f\"{single_indent}{single_indent}{single_indent}inputs = [\\n\")\n",
-    "                    flow_file.write('\\n'.join([f\"{single_indent}{single_indent}{single_indent}{single_indent}ProcessingInput(source={outputs[cv]}, destination=\\\"/opt/ml/processing/{cv}\\\"),\\n\" \n",
+    "                    flow_file.write('\\n'.join([f\"{single_indent}{single_indent}{single_indent}{single_indent}ProcessingInput(source=self.{outputs[cv]}, destination=\\\"/opt/ml/processing/{cv}\\\"),\\n\" \n",
     "                                     for cv in step_vars['step_train_vars'] + step_vars['step_proc_vars']]))\n",
-    "                    flow_file.write(f\"{single_indent}{single_indent}{single_indent}]\\n\")\n",
+    "                    flow_file.write(f\"{single_indent}{single_indent}{single_indent}],\\n\")\n",
     "                    \n",
     "                # ProcOutputs\n",
-    "                proc_outs = {(v, f'step_{step.name}.properties.ProcessingOutputConfig.Outputs[\"{v}\"].S3Output.S3Uri') \n",
+    "                proc_outs = {(v, f'{step.name}_step.properties.ProcessingOutputConfig.Outputs[\"{v}\"].S3Output.S3Uri') \n",
     "                                   for v in return_vars}\n",
     "                outputs.update(proc_outs)\n",
     "                if len(proc_outs) > 0:\n",
@@ -657,8 +696,6 @@
     "            #print(f'Processing Flow scope extended by: {return_vars}')\n",
     "            proc_flow_scope.extend(return_vars)\n",
     "        elif is_train_step(step):\n",
-    "            print(f\"Step: {step.name}\")\n",
-    "            print(step_vars)\n",
     "            if len(step_vars) > 0:\n",
     "                #if len(step.args) > 0:\n",
     "                #    print(f\"Step Args: {step.args}\")\n",
@@ -669,34 +706,35 @@
     "                #\n",
     "                #if len(step_vars['step_proc_vars']) > 0:\n",
     "                #    print(f\"TrainingInputs: {[outputs[cv] for cv in step_vars['step_proc_vars']]}\")\n",
-    "                train_outs = {(v, f'step_{step.name}.properties.ModelArtifacts.S3ModelArtifacts') \n",
+    "                train_outs = {(v, f'{step.name}_step.properties.ModelArtifacts.S3ModelArtifacts') \n",
     "                                   for v in return_vars}\n",
     "                outputs.update(train_outs)\n",
-    "                #print(f'Training Flow scope extended by: {return_vars}')\n",
     "                train_flow_scope.extend(return_vars)\n",
-    "                flow_file.write(\"\"\"\n",
-    "        metrics_regex = None\n",
-    "        if metric_names in self.__dict__:\n",
-    "            metrics = self.metric_names.split(\",\")\n",
-    "            metrics_regex = [{\"Name\": m, \"Regex\": f\"{m}=(.*?);\"} for m in metrics]\n",
-    "\n",
-    "        estimator = Estimator(\n",
-    "            image_uri = self.train_image_uri,\n",
-    "            entry_point=\"test_clustering_pipeline_fit.py\",\n",
-    "            hyperparameters={\"workers\": str(self.workers.__int__())},\n",
-    "            instance_type=self.train_instance_type,\n",
-    "            instance_count=1,\n",
-    "            output_path=f\"s3://{os.environ['SCIFLOW_BUCKET']}/test_clustering/training-job-output\",\n",
-    "            base_job_name=f'processing-job/{__file__}',\n",
-    "            sagemaker_session = self.sagemaker_session,\n",
-    "            role = self.role,\n",
-    "            metric_definitions=metrics_regex,\n",
-    "            enable_sagemaker_metrics=True,\n",
-    "        )\n",
-    "        \"\"\")\n",
+    "                \n",
+    "                flow_file.write(f\"{single_indent}metrics_regex = None\\n\")\n",
+    "                flow_file.write(f\"{single_indent}if 'metric_names' in self.__dict__:\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}metrics = self.metric_names.split(\",\")\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}metrics_regex = [{\"Name\": m, \"Regex\": f\"{m}=(.*?);\"} for m in metrics]\\n\")\n",
+    "                flow_file.write(f\"\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}estimator = Estimator(\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}image_uri = \\\"141502667606.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-scikit-learn:0.23-1-cpu-py3\\\",\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}entry_point=\\\"{test_clustering_fit}\\\",\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}hyperparameters={{\\\"workers\\\": str(self.workers.__int__())},\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}instance_type=\\\"ml.m5.xlarge\\\",\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}instance_count=1,\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}instance_type=\"ml.m5.xlarge\",\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}output_path=\\\"s3://{{os.environ['SCIFLOW_BUCKET']}}/test_clustering/training-job-output\\\",\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}base_job_name=f'processing-job/{__file__}',\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}sagemaker_session = self.sagemaker_session,\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}role = self.role,\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}metric_definitions=metrics_regex,\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}enable_sagemaker_metrics=True,\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent})\\n\")\n",
     "                flow_file.write(\"\\n\")\n",
-    "                flow_file.write(f\"{single_indent}{single_indent}step_{step.name} = TrainingStep(\\n\")\n",
-    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}name=\\\"{step.name}\\\"\\n\")\n",
+    "                \n",
+    "                flow_file.write(\"\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{step.name}_step = TrainingStep(\\n\")\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}name=\\\"{step.name}\\\",\\n\")\n",
     "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}estimator=estimator,\\n\")\n",
     "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}inputs={{\\n\")\n",
     "                flow_file.write(f\"{single_indent}{single_indent}{single_indent}{single_indent}\\\"documents\\\": TrainingInput(\\n\")\n",
@@ -715,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,48 +879,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "preprocess\n",
-      "['traffic_percent', 'workers', 'model_level', 'min_date']\n",
-      "[]\n",
-      "[]\n",
-      "fit\n",
-      "['traffic_percent', 'workers', 'model_level', 'min_date']\n",
-      "['documents']\n",
-      "[]\n",
-      "Step: fit\n",
-      "{'step_input': ['workers'], 'step_proc_vars': ['documents'], 'step_train_vars': []}\n",
-      "evaluate\n",
-      "['traffic_percent', 'workers', 'model_level', 'min_date']\n",
-      "['documents']\n",
-      "['model']\n",
       "Converted test_clustering.ipynb to TestClusteringPipeline in: test_clustering.py\n"
      ]
     }
    ],
    "source": [
-    "nb_to_sagemaker_pipeline(nb_path, flow_path, silent=False, track_experiment=False)"
+    "#nb_to_sagemaker_pipeline(nb_path, flow_path, silent=False, track_experiment=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add Additional Code to Processing Jobs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 336,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Path('/home/sagemaker-user/git/sciflow')"
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# from sciflow.utils import lib_path\n",
+    "# lib_path()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add requirements.txt"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Generate if it doesn't exist\n",
+    "# Copy to flow directory"
+   ]
   }
  ],
  "metadata": {
