Fixed s3_utils and added test cleanup

--- a/nbs/s3_utils.ipynb
+++ b/nbs/s3_utils.ipynb
@@ -22,25 +22,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sciflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbotocore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01merrorfactory\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ClientError\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbotocore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexceptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ConnectTimeoutError\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msciflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m prepare_env\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sciflow'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "import os\n",
     "import re\n",
     "import socket\n",
+    "import uuid\n",
     "from pathlib import Path\n",
     "\n",
     "import boto3\n",
@@ -48,12 +37,12 @@
     "from botocore.errorfactory import ClientError\n",
     "from botocore.exceptions import ConnectTimeoutError\n",
     "\n",
-    "from sciflow.utils import prepare_env"
+    "from sciflow.utils import lib_path, prepare_env"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,28 +128,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "missing_bucket = \"nobuckethere\"\n",
     "invalid_bucket = \"invalid_bucket_name\"\n",
-    "experiment_dir = \"discovery/experiments/s3_test\""
+    "test_root = f\"sciflow_testing_{str(uuid.uuid4()).split('-')[-1]}\"\n",
+    "test_dir = f\"{test_root}/s3_utils\"\n",
+    "local_dir = f\"/tmp/{test_root}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = Config(connect_timeout=5, read_timeout=5, retries={\"max_attempts\": 0})\n",
-    "s3_res = boto3.resource(\"s3\", config=config)"
+    "s3_res = boto3.resource(\"s3\", config=config)\n",
+    "s3_client = boto3.client(\"s3\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,52 +164,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'SCIFLOW_BUCKET'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bucket_name \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menviron\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSCIFLOW_BUCKET\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "File \u001b[0;32m/opt/conda/envs/kernel-env/lib/python3.9/os.py:679\u001b[0m, in \u001b[0;36m_Environ.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    676\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencodekey(key)]\n\u001b[1;32m    677\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[1;32m    678\u001b[0m     \u001b[38;5;66;03m# raise KeyError with the original key value\u001b[39;00m\n\u001b[0;32m--> 679\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    680\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdecodevalue(value)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'SCIFLOW_BUCKET'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prepare_env()\n",
-    "bucket_name = os.environ['SCIFLOW_BUCKET']"
+    "bucket_name = os.environ[\"SCIFLOW_BUCKET\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert not objects_exist_in_dir(s3_res, bucket_name, \"/non\")\n",
+    "assert not objects_exist_in_dir(s3_res, bucket_name, test_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3_client.upload_file(\n",
+    "    str(Path(\"index.ipynb\").resolve()), bucket_name, s3_join(test_dir, \"index.json\")\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'bucket_name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [14]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m objects_exist_in_dir(s3_res, \u001b[43mbucket_name\u001b[49m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/non\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m objects_exist_in_dir(s3_res, bucket_name, experiment_dir)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'bucket_name' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "assert not objects_exist_in_dir(s3_res, bucket_name, \"/non\")\n",
-    "assert objects_exist_in_dir(s3_res, bucket_name, experiment_dir)"
+    "assert objects_exist_in_dir(s3_res, bucket_name, test_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,9 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 17 ms, sys: 0 ns, total: 17 ms\n",
+      "Wall time: 66.1 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "assert bucket_exists(s3_res, bucket_name)\n",
@@ -253,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,16 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(list_s3_subdirs(s3_res, bucket_name, experiment_dir)) > 0"
+    "assert len(list_s3_subdirs(s3_res, bucket_name, test_root)) > 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,57 +289,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
-    "def upload_directory(s3_res, path, bucket_name, prefix):\n",
+    "\n",
+    "def upload_directory(s3_client, path, bucket_name, prefix):\n",
     "    for root, dirs, files in os.walk(path):\n",
     "        # Ignore non-python source files and IPython checkpoint files\n",
-    "        for file in [f for f in files if f.split('.')[-1] == 'py' and root.find('ipynb_checkpoints') == -1]:\n",
-    "            s3_res.upload_file(os.path.join(root, file), bucket_name, f\"{prefix}{file}\")"
+    "        for file in [\n",
+    "            f\n",
+    "            for f in files\n",
+    "            if f.split(\".\")[-1] == \"py\" and root.find(\"ipynb_checkpoints\") == -1\n",
+    "        ]:\n",
+    "            s3_client.upload_file(\n",
+    "                os.path.join(root, file), bucket_name, f\"{prefix}/{file}\"\n",
+    "            )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO test"
+    "assert not (objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/_nbdev.py\"))\n",
+    "\n",
+    "upload_directory(s3_client, str(lib_path()), bucket_name, test_dir)\n",
+    "\n",
+    "assert objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/_nbdev.py\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
-    "def download_directory(s3_client, bucketname, remote_key, local_dir):\n",
+    "\n",
+    "def download_directory(s3_client, s3_res, bucket_name, remote_key, local_dir):\n",
     "    if not Path(local_dir).exists():\n",
     "        Path(local_dir).mkdir(parents=True)\n",
-    "    all_files = [obj.key for obj in boto3.resource('s3').Bucket(bucketname).objects.filter(Prefix=remote_key)]\n",
+    "    all_files = [\n",
+    "        obj.key for obj in s3_res.Bucket(bucket_name).objects.filter(Prefix=remote_key)\n",
+    "    ]\n",
     "    for file in all_files:\n",
-    "        file_name = file.split('/')[-1]\n",
-    "        s3_client.download_file(bucketname, file, f'{local_dir}/{file_name}')"
+    "        file_name = file.split(\"/\")[-1]\n",
+    "        s3_client.download_file(bucket_name, file, f\"{local_dir}/{file_name}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO test"
+    "assert not Path(f\"{local_dir}/_nbdev.py\").exists()\n",
+    "\n",
+    "download_directory(s3_client, s3_res, bucket_name, test_dir, local_dir)\n",
+    "\n",
+    "import shutil\n",
+    "\n",
+    "py_files = [f for f in list(os.walk(local_dir))[0][2] if f.split(\".\")[-1] == \"py\"]\n",
+    "assert \"_nbdev.py\" in py_files\n",
+    "\n",
+    "shutil.rmtree(local_dir)\n",
+    "delete_dir(s3_res, bucket_name, test_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
